--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
+    "swiper": "^8.4.5",
     "vue": "^3.0.0",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
