--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
+    "mockjs": "^1.1.0",
     "swiper": "^8.4.5",
     "vue": "^3.0.0",
     "vue-awesome-swiper": "^2.6.7",
