--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "better-scroll": "^2.5.0",
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
     "mockjs": "^1.1.0",
